--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: mysterin's note
-subtitle:
-description:
+title: mysterin's Notes
+subtitle: NO CODE, NO MORE
+description: 来自深渊
 author: mysterin
 language: zh-Hans
 timezone:
